--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
   <description>JBoss Seam Scopes</description>
 
   <modules>
+    <module>common</module>
     <module>monterey</module>
+    <module>clustered</module>
   </modules>
 
   <properties>
@@ -33,56 +35,6 @@
     <version.arquillian>1.0.0.CR1</version.arquillian>
     <version.metainf>1.1</version.metainf>
   </properties>
-
-  <build>
-    <plugins>
-      <plugin>
-	     <groupId>org.apache.maven.plugins</groupId>
-	     <artifactId>maven-compiler-plugin</artifactId>
-	     <configuration>
-	       <source>1.5</source>
-	       <target>1.5</target>
-	       <debug>true</debug>
-	       <encoding>UTF-8</encoding>
-	       <fork>true</fork>
-	     </configuration>
-	   </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.0-beta-9</version>
-        <configuration>
-          <autoVersionSubmodules>true</autoVersionSubmodules>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-idea-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <downloadSources>true</downloadSources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.3</version>
-        <configuration>
-          <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          <includes>
-            <include>org/jboss/test/**/*TestCase.java</include>
-          </includes>
-          <systemProperties>
-             <property>
-               <name>capedwarf.localhost</name>
-               <value>://localhost:8080/client/</value>
-             </property>
-          </systemProperties>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
   <repositories>
       <repository>
