--- a/clustered/pom.xml
+++ b/clustered/pom.xml
@@ -48,12 +48,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-core</artifactId>
         </dependency>
@@ -138,5 +132,40 @@
         	<scope>compile</scope>
         </dependency>
     </dependencies>
+    <profiles>
+
+      <profile>
+      <id>jbossas-managed-7</id>
+      <dependencies>
+         <dependency>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-arquillian-container-managed</artifactId>
+            <version>7.0.1.Final</version>
+         </dependency>
+      </dependencies>
+      </profile>
+
+      <profile>
+      <id>jbossas-remote-7</id>
+      <dependencies>
+         <dependency>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-arquillian-container-remote</artifactId>
+            <version>7.0.1.Final</version>
+         </dependency>
+      </dependencies>
+      </profile>
+
+      <profile>
+      <id>weld-ee-embedded-1.1</id>
+      <dependencies>
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+            <scope>test</scope>
+        </dependency>
+      </dependencies>
+      </profile>
+    </profiles>
 
 </project>
